spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-rabbitmq-producer-v1
  labels:
    app: spring-rabbitmq-producer
    version: v1
spec:
  selector:
    matchLabels:
      app: spring-rabbitmq-producer
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-rabbitmq-producer
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: spring-rabbitmq-producer
          image: sangad/spring-rabbitmq-producer:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 294Mi
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
