istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-rabbitmq-producer
spec:
  hosts:
  - "*"
  gateways:
  - spring-api-gateway
  http:
  - name: "spring-rabbitmq-producer-route"
    match:
    - uri:
        prefix: "/mqapi"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: spring-rabbitmq-producer.demo.svc.cluster.local
        subset: v1
#      weight: 50
#    - destination:
#        host: spring-service.demo.svc.cluster.local
#        subset: v1
#      weight: 50
